; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_utrace.c_utrace_finish_vfork.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_utrace.c_utrace_finish_vfork.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }
%struct.utrace = type { i32, i64 }

@UTRACE_RESUME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @utrace_finish_vfork(%struct.task_struct* %0) #0 {
  %2 = alloca %struct.task_struct*, align 8
  %3 = alloca %struct.utrace*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %2, align 8
  %4 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %5 = call %struct.utrace* @task_utrace_struct(%struct.task_struct* %4)
  store %struct.utrace* %5, %struct.utrace** %3, align 8
  %6 = load %struct.utrace*, %struct.utrace** %3, align 8
  %7 = getelementptr inbounds %struct.utrace, %struct.utrace* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %23

10:                                               ; preds = %1
  %11 = load %struct.utrace*, %struct.utrace** %3, align 8
  %12 = getelementptr inbounds %struct.utrace, %struct.utrace* %11, i32 0, i32 0
  %13 = call i32 @spin_lock(i32* %12)
  %14 = load %struct.utrace*, %struct.utrace** %3, align 8
  %15 = getelementptr inbounds %struct.utrace, %struct.utrace* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load %struct.utrace*, %struct.utrace** %3, align 8
  %17 = getelementptr inbounds %struct.utrace, %struct.utrace* %16, i32 0, i32 0
  %18 = call i32 @spin_unlock(i32* %17)
  %19 = load %struct.task_struct*, %struct.task_struct** %2, align 8
  %20 = load %struct.utrace*, %struct.utrace** %3, align 8
  %21 = load i32, i32* @UTRACE_RESUME, align 4
  %22 = call i32 @utrace_stop(%struct.task_struct* %19, %struct.utrace* %20, i32 %21)
  br label %23

23:                                               ; preds = %10, %1
  ret void
}

declare dso_local %struct.utrace* @task_utrace_struct(%struct.task_struct*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @utrace_stop(%struct.task_struct*, %struct.utrace*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
